* Added missing delete feature for entities, close #5; * Added 'fax' field to Entity model, close #2; * Added file attachment to notecards model, close #1; * Added PO files for french and spanish; * Added usage of django.contrib.messages for some forms; * Bump to 0.4.0;

--- a/bazar/templates/bazar/base.html
+++ b/bazar/templates/bazar/base.html
@@ -17,6 +17,16 @@
     <div class="small-12 columns">
         {% block breadcrumbs_block %}{% autobreadcrumbs_tag %}{% endblock %}
         {% block bazar_maintitle %}<h2>{% current_title_from_breadcrumbs %}</h2>{% endblock %}
+        {% block bazar_messages %}
+            {% if messages %}
+                {% for message in messages %}
+                <div data-alert class="alert-box {% if message.tags %}{{ message.tags }}{% endif %} radius">
+                {{ message }}
+                <a href="#" class="close">&times;</a>
+                </div>
+                {% endfor %}
+            {% endif %}
+        {% endblock %}
         {% block bazar_content %}{% endblock %}
     </div>
 </div>{% endblock %}
